--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.49.4",
     "autoprefixer": "^10.4.14",
     "lucide-react": "^0.270.0",
     "next": "14.0.4",
